--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CSV to HTML Table</title>
-    <meta name="author" content="Derek Eder">
+    <meta name="author" content="Damian Joseph">
     <meta content="Display any CSV file as a searchable, filterable, pretty HTML table">
 
     <!-- Bootstrap core CSS -->
@@ -22,7 +22,7 @@
                 <h1>CSV to HTML Table</h1>
 
                 <p>Display any CSV file as a searchable, filterable, pretty HTML table. Done in 100% JavaScript. <a
-                        href="https://github.com/derekeder/csv-to-html-table">Code
+                        href="https://github.com/Sage-of-Sparta/csv-to-html-table">Code
                         on GitHub</a>.</p>
 
                 <p> Here's a table of Health Clinics from the <a href="https://data.cityofchicago.org/browse?q=health%20clinic&sortBy=relevance&utf8=%E2%9C%93">City
@@ -35,9 +35,8 @@
         <footer class="row">
             <div class="col">
                 <hr>
-                <p class="text-right"><a href="https://github.com/derekeder/csv-to-html-table">CSV to HTML Table</a> by
-                    <a href="http://derekeder.com">Derek
-                        Eder</a></p>
+                <p class="text-right"><a href="https://github.com/Sage-of-Sparta/csv-to-html-table">CSV to HTML Table</a> by
+                    <a href="https://sage-of-sparta.github.io/">Damian Joseph</a></p>
             </div>
         </footer>
     </div>
