--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<!-- Compressed Scripts -->
 	<script src="js/slides.min.js" type="text/javascript"></script>
 
+
+
 	<!-- Custom Scripts -->
 	<!-- <script src="js/custom.js" type="text/javascript"></script> -->
 
@@ -629,8 +631,13 @@
           </form>
 
         </div>
+
+        <!-- DJ Added these charts -->
         <div id="chartDiv" style="width:50%; height:300px; margin:0 auto;"></div>
         <div id="chartDiv2" style="width:75%; height:300px; margin:0 auto;"></div>
+        <div id="chartDiv3" style="max-width: 740px;height: 400px;margin: 0px auto"></div>
+
+
 
       </div>
 
@@ -701,12 +708,19 @@
 
 <!-- Loading Progress Bar -->
 <div class="progress-bar blue"></div>
-		
+
+<!-- 11/08/21 DJ adding in blank chart  -->
+
+<script src="https://code.jscharting.com/latest/jscharting.js"></script>
+<script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
+<script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
+<script src="js/index.js"></script>
+
+
+
 </body>
 
 
-<!-- 11/08/21 DJ adding in blank chart -->
-<script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
-<script src="js/index.js"></script>
+
 
 </html>
