--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 	<!-- Compressed Scripts -->
 	<script src="js/slides.min.js" type="text/javascript"></script>
 
+<!-- DJ Damian added -->
+  <script src="js/jscharting.js" type="text/javascript"></script>
+  <script src="js/types.js" type="text/javascript"></script>
+
 
 
 	<!-- Custom Scripts -->
