--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Example</title>
     </head>
     <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
+        <p>Damo macro charts.</p>
 		<div id="chartDiv2" style="width:75%; height:300px; margin:0 auto;"></div>
 
 		<script src="https://code.jscharting.com/latest/jscharting.js"></script>
