--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
         <p>Damo macro charts.</p>
 		<div id="chartDiv2" style="width:80%; height:500px; margin:0 auto;"></div>
-
+		<div id="chartDiv3" style="width:80%; height:500px; margin:0 auto;"></div>
+		
 		<script src="https://code.jscharting.com/latest/jscharting.js"></script>
 		<script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
 		<script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
