get all ISM manufacturing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Example</title>
     </head>
     <body>
-        <p>Damo macro charts.</p>
+        <p>Macro Economic Data</p>
 		<div id="chartDiv2" style="width:80%; height:500px; margin:0 auto;"></div>
 		<div id="chartDiv3" style="width:80%; height:500px; margin:0 auto;"></div>
 		<div id="chartDiv4" style="width:80%; height:500px; margin:0 auto;"></div>
