--- a/index-2.html
+++ b/index-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     
-
+<!-- index13:13-->
 <head>
         
         <meta charset="utf-8">
@@ -112,7 +112,7 @@
                             <li class="nav-separator"></li>
                             <li  class="nav-icon"><a href="http://facebook.com/" target="_blank"><i class="ion-social-facebook"></i></a></li>
                             <li  class="nav-icon"><a href="http://twitter.com/" target="_blank"><i class="ion-social-twitter"></i></a></li>
-                            <li  class="nav-icon"><a href="http://youtube.com/" target="_blank"><i class="ion-help-buoy"></i></a></li>
+                            <li  class="nav-icon"><a href="http://youtube.com/" target="_blank"><i class="ion-social-youtube"></i></a></li>
                         </ul>
 
                     </div>
@@ -182,7 +182,7 @@
 
                     <div class="col-md-12 text-center pb20">
                         <h2>Sage of Sparta<br><strong>Something You Love</strong></h2>
-                        <p class="lead">I turn my <span class="color">dreams</span> into<br> reality!</p>
+                        <p class="lead">I turn my <span class="color">dreams</span> into reality!</p>
                     </div>
 
                     <div class="col-sm-6 feature-left">
@@ -1056,7 +1056,14 @@
         <!-- Map -->
         <section class="vossen-map">
             <!-- Paste your map iframe here -->
-            <iframe height="550" src="https://maps.google.com/maps?q=Renaissance%20New%20York%20Hotel%2057%2C%20New%20York%2C%20USA&amp;t=m&amp;z=17&amp;output=embed&amp;iwloc=near" border="0" marginwidth="0" marginheight="0"></iframe>
+            <!-- <iframe height="550" src="https://maps.google.com/maps?q=Renaissance%20New%20York%20Hotel%2057%2C%20New%20York%2C%20USA&amp;t=m&amp;z=17&amp;output=embed&amp;iwloc=near" border="0" marginwidth="0" marginheight="0"></iframe> -->
+
+
+                        <!-- DAMIAN J -->
+            <div id="chartDiv2" style="width:80%; height:500px; margin:0 auto;"></div>  
+            <div id="chartDiv3" style="width:80%; height:500px; margin:0 auto;"></div>
+            <div id="chartDiv4" style="width:80%; height:500px; margin:0 auto;"></div>
+
         </section>
         <!-- End Map -->
 
@@ -1089,4 +1096,5 @@
 
     </body>
 
+<!-- index13:13-->
 </html>
