create ISM manufacturing page

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                                                 <li><a href="elements.html#elements-circles">Progress Circles</a></li>
                                                 <li><a href="elements.html#elements-icons">Icon Fonts</a></li>
                                                 <li><a href="elements.html#elements-maps">Maps</a></li>
+                                                <li><a href="elements.html#elements-ism-manufacturing">ISM Manufacturing</a></li>
                                                 <li><a href="elements.html#elements-grid">Grid Columns</a></li>
                                                 <li><a href="elements.html#elements-countdown">Countdowns</a></li>
                                                 <li><a href="elements.html#elements-testimonials">Testimonials</a></li>
@@ -1060,6 +1061,11 @@
         </section>
         <!-- End Map -->
 
+
+
+
+
+
         <!-- Start Footer -->
         <footer id="footer" class="footer style-1 dark">
 
@@ -1082,7 +1088,7 @@
         <script src="https://code.jscharting.com/latest/jscharting.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
-        <script src="js/index.js"></script>
+        <!-- <script src="js/index.js"></script> -->
         <script src="js/jquery.js"></script>
         <script src="js/init.js"></script>
         <script src="js/scripts.js"></script>
