--- a/project-slides.html
+++ b/project-slides.html
@@ -85,7 +85,7 @@
                                                 <li><a href="project-slides.html">Project Slides</a></li>
                                                 <li><a href="project-gallery.html">Projects Gallery</a></li>
                                                 <li><a href="project-video.html">Projects Video</a></li>
-                                                <li><a href="project-wide-slides.html">Project Wide Slides</a></li>
+                                                <li><a href="project-wide-slides.html">ISM Manufacturing</a></li>
                                                 <li><a href="project-wide-video.html">Project Wide Video</a></li>
                                             </ul>
                                         </div>
@@ -127,12 +127,6 @@
                         <h1><strong>Project</strong> Slides</h1>
                         <p class="lead">Digital advertising campaigns and product design, we approach<br>our projects with strategic and creative thinking</p>
                     </div>
-                    <!-- DAMIAN J -->
-                    <div id="chartDiv2" style="width:80%; height:500px; margin:0 auto;"></div>  
-                    <div id="chartDiv3" style="width:80%; height:500px; margin:0 auto;"></div>
-                    <div id="chartDiv4" style="width:80%; height:500px; margin:0 auto;"></div>
-                    <div id="chartDiv5" style="width:80%; height:500px; margin:0 auto;"></div>
-
 
                     <div class="col-md-8 mt20 mb40">
                         <div class="carousel lightbox" data-autoplay="false" data-speed="4000" data-touch-drag="true" data-loop="false">
@@ -213,10 +207,6 @@
 
         </footer>
         <!-- End Footer -->
-        <script src="https://code.jscharting.com/latest/jscharting.js"></script>
-        <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
-        <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
-        <script src="js/index.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/init.js"></script>
         <script src="js/scripts.js"></script>
