--- a/project-wide-slides.html
+++ b/project-wide-slides.html
@@ -85,7 +85,7 @@
                                                 <li><a href="project-slides.html">Project Slides</a></li>
                                                 <li><a href="project-gallery.html">Projects Gallery</a></li>
                                                 <li><a href="project-video.html">Projects Video</a></li>
-                                                <li><a href="project-wide-slides.html">Project Wide Slides</a></li>
+                                                <li><a href="project-wide-slides.html">ISM Manufacturing</a></li>
                                                 <li><a href="project-wide-video.html">Project Wide Video</a></li>
                                             </ul>
                                         </div>
@@ -124,39 +124,19 @@
                 <div class="row text-center">
 
                     <div class="col-md-12 text-center">
-                        <h1><strong>Project</strong> Slides</h1>
-                        <p class="lead">Digital advertising campaigns and product design, we approach<br>our projects with strategic and creative thinking</p>
-                    </div>
-
-                    <div class="col-md-12 mt20 mb40">
-                        <div class="carousel">
-                            <div><img src="img/portfolio/1.jpg" class="img-responsive width100" alt="#"></div>
-                            <div><img src="img/portfolio/2.jpg" class="img-responsive width100" alt="#"></div>
-                            <div><img src="img/portfolio/3.jpg" class="img-responsive width100" alt="#"></div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="col-sm-6 feature-left">
-                            <i class="icon-telescope color size-3x"></i>
-                            <i class="icon-telescope back-icon"></i>
-                            <div class="feature-left-content">
-                                <h4><strong>Design</strong></h4>
-                                <p>Vivamus congue diam vitae tortor imperdiet congue. Nullam sagittis, tristique diam, ut ullamcorper tellus. Cras porttitor massa. Duis vel est nec sapien suscipit gravida. Integer vitae tortor dui. Donec libero quam, euismod sit amet enim ac, varius dictum.</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 feature-left">
-                            <i class="icon-layers color size-3x"></i>
-                            <i class="icon-layers back-icon"></i>
-                            <div class="feature-left-content">
-                                <h4><strong>Development</strong></h4>
-                                <p>Vivamus congue diam vitae tortor imperdiet congue. Nullam sagittis, tristique diam, ut ullamcorper tellus. Cras porttitor massa. Duis vel est nec sapien suscipit gravida. Integer vitae tortor dui. Donec libero quam, euismod sit amet enim ac, varius dictum.</p>
-                            </div>
-                        </div>
+                        <h1><strong>ISM Manufacturing</strong></h1>
+                        <p class="lead">The ISM manufacturing index or purchasing managers' index is considered a key indicator of the state of the U.S. economy. It indicates the level of demand for products by measuring the amount of ordering activity at the nation's factories. The PMI number, which is announced on the first business day of each month, can greatly influence investor and business confidence.</p>
                     </div>
 
                 </div>
             </div>
+
+                           <!-- DAMIAN J -->
+            <div id="chartDiv2" style="width:80%; height:500px; margin:0 auto;"></div>  
+            <div id="chartDiv3" style="width:80%; height:500px; margin:0 auto;"></div>
+            <div id="chartDiv4" style="width:80%; height:500px; margin:0 auto;"></div>
+
+
         </section>
         <!-- End Project -->
 
@@ -185,7 +165,10 @@
 
         </footer>
         <!-- End Footer -->
-
+        <script src="https://code.jscharting.com/latest/jscharting.js"></script>
+        <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
+        <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
+        <script src="js/index.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/init.js"></script>
         <script src="js/scripts.js"></script>
