--- a/elements.html
+++ b/elements.html
@@ -5,7 +5,7 @@
 <head>
         
 		<meta charset="utf-8">
-		<title>Wunderkind - Multipurpose Responsive Onepage Template</title>
+		<title>Sage of Sparta</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="img/assets/favicon.png" rel="icon" type="image/png">
 		<link href="css/init.css" rel="stylesheet" type="text/css">
@@ -86,7 +86,7 @@
 												<li><a href="project-slides.html">Project Slides</a></li>
 												<li><a href="project-gallery.html">Projects Gallery</a></li>
 												<li><a href="project-video.html">Projects Video</a></li>
-												<li><a href="project-wide-slides.html">Project Wide Slides</a></li>
+												<li><a href="project-wide-slides.html">ISM Manufacturing</a></li>
 												<li><a href="project-wide-video.html">Project Wide Video</a></li>
 											</ul>
 										</div>
@@ -1115,14 +1115,26 @@
 
 				</div>
 			</div>
-						<!-- DAMIAN J -->
+
+		</section>
+		<!-- End Maps -->
+
+		<!-- ISM Manufacturing -->
+		<section id="#elements-ism-manufacturing" class="pt110 pb100">
+			<div class="container">
+				<div class="col-md-12 text-center pb40">
+					<h1><strong>ISM Manufacturing</strong></h1>
+                </div>
+			</div>
+
             <div id="chartDiv2" style="width:80%; height:500px; margin:0 auto;"></div>  
             <div id="chartDiv3" style="width:80%; height:500px; margin:0 auto;"></div>
             <div id="chartDiv4" style="width:80%; height:500px; margin:0 auto;"></div>
 
 
-		</section>
-		<!-- End Maps -->
+		</section> -->
+		<!-- End ISM Manufacturing -->
+
 
 		<!-- Countdown -->
 		<section id="elements-countdown" class="pt100 pb100 bg-grey">
@@ -1692,8 +1704,7 @@
         <script src="https://code.jscharting.com/latest/jscharting.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
-        <script src="js/index.js"></script>
-		<script src="js/jquery.js"></script>
+        <script src="js/jquery.js"></script>
 		<script src="js/init.js"></script>
 		<script src="js/scripts.js"></script>
 
