--- a/index-2.html
+++ b/index-2.html
@@ -88,7 +88,7 @@
                                                 <li><a href="project-slides.html">Project Slides</a></li>
                                                 <li><a href="project-gallery.html">Projects Gallery</a></li>
                                                 <li><a href="project-video.html">Projects Video</a></li>
-                                                <li><a href="project-wide-slides.html">Project Wide Slides</a></li>
+                                                <li><a href="project-wide-slides.html">ISM Manufacturing</a></li>
                                                 <li><a href="project-wide-video.html">Project Wide Video</a></li>
                                             </ul>
                                         </div>
@@ -1056,16 +1056,13 @@
         <!-- Map -->
         <section class="vossen-map">
             <!-- Paste your map iframe here -->
-            <!-- <iframe height="550" src="https://maps.google.com/maps?q=Renaissance%20New%20York%20Hotel%2057%2C%20New%20York%2C%20USA&amp;t=m&amp;z=17&amp;output=embed&amp;iwloc=near" border="0" marginwidth="0" marginheight="0"></iframe> -->
-
-
-                        <!-- DAMIAN J -->
-            <div id="chartDiv2" style="width:80%; height:500px; margin:0 auto;"></div>  
-            <div id="chartDiv3" style="width:80%; height:500px; margin:0 auto;"></div>
-            <div id="chartDiv4" style="width:80%; height:500px; margin:0 auto;"></div>
+            <iframe height="550" src="https://maps.google.com/maps?q=Renaissance%20New%20York%20Hotel%2057%2C%20New%20York%2C%20USA&amp;t=m&amp;z=17&amp;output=embed&amp;iwloc=near" border="0" marginwidth="0" marginheight="0"></iframe>
 
         </section>
         <!-- End Map -->
+
+
+
 
         <!-- Start Footer -->
         <footer id="footer" class="footer style-1 dark">
@@ -1089,7 +1086,6 @@
         <script src="https://code.jscharting.com/latest/jscharting.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
-        <script src="js/index.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/init.js"></script>
         <script src="js/scripts.js"></script>
