write python to download more economic data

--- a/index-2.html
+++ b/index-2.html
@@ -88,7 +88,7 @@
                                                 <li><a href="project-slides.html">Project Slides</a></li>
                                                 <li><a href="project-gallery.html">Projects Gallery</a></li>
                                                 <li><a href="project-video.html">Projects Video</a></li>
-                                                <li><a href="project-wide-slides.html">ISM Manufacturing</a></li>
+                                                <li><a href="ism.html">ISM Manufacturing</a></li>
                                                 <li><a href="project-wide-video.html">Project Wide Video</a></li>
                                             </ul>
                                         </div>
