--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                                                 <li><a href="elements.html#elements-circles">Progress Circles</a></li>
                                                 <li><a href="elements.html#elements-icons">Icon Fonts</a></li>
                                                 <li><a href="elements.html#elements-maps">Maps</a></li>
-                                                <li><a href="elements.html#elements-ism-manufacturing">ISM Manufacturing</a></li>
                                                 <li><a href="elements.html#elements-grid">Grid Columns</a></li>
                                                 <li><a href="elements.html#elements-countdown">Countdowns</a></li>
                                                 <li><a href="elements.html#elements-testimonials">Testimonials</a></li>
@@ -89,7 +88,7 @@
                                                 <li><a href="project-slides.html">Project Slides</a></li>
                                                 <li><a href="project-gallery.html">Projects Gallery</a></li>
                                                 <li><a href="project-video.html">Projects Video</a></li>
-                                                <li><a href="project-wide-slides.html">Project Wide Slides</a></li>
+                                                <li><a href="ism.html">ISM Manufacturing</a></li>
                                                 <li><a href="project-wide-video.html">Project Wide Video</a></li>
                                             </ul>
                                         </div>
@@ -1088,7 +1087,6 @@
         <script src="https://code.jscharting.com/latest/jscharting.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
-        <!-- <script src="js/index.js"></script> -->
         <script src="js/jquery.js"></script>
         <script src="js/init.js"></script>
         <script src="js/scripts.js"></script>
