remove pages not applicable

--- a/ism.html
+++ b/ism.html
@@ -85,8 +85,8 @@
                                                 <li><a href="project-slides.html">Project Slides</a></li>
                                                 <li><a href="project-gallery.html">Projects Gallery</a></li>
                                                 <li><a href="project-video.html">Projects Video</a></li>
-                                                <li><a href="project-wide-slides.html">ISM Manufacturing</a></li>
-                                                <li><a href="project-wide-video.html">Project Wide Video</a></li>
+                                                <li><a href="ism.html">ISM Manufacturing</a></li>
+                                                <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -134,7 +134,6 @@
                            <!-- DAMIAN J -->
             <div id="chartDiv2" style="width:80%; height:500px; margin:0 auto;"></div>  
             <div id="chartDiv3" style="width:80%; height:500px; margin:0 auto;"></div>
-            <div id="chartDiv4" style="width:80%; height:500px; margin:0 auto;"></div>
 
 
         </section>
