--- a/portfolio-fullwidth.html
+++ b/portfolio-fullwidth.html
@@ -85,8 +85,8 @@
                                                 <li><a href="project-slides.html">Project Slides</a></li>
                                                 <li><a href="project-gallery.html">Projects Gallery</a></li>
                                                 <li><a href="project-video.html">Projects Video</a></li>
-                                                <li><a href="ism.html">Project Wide Slides</a></li>
-                                                <li><a href="project-wide-video.html">Project Wide Video</a></li>
+                                                <li><a href="ism.html">ISM Manufacturing</a></li>
+                                                <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                             </ul>
                                         </div>
                                     </li>
