--- a/ism-heatmaps.html
+++ b/ism-heatmaps.html
@@ -157,7 +157,27 @@
                 </div>
             </div>
 
-            <div id="chartDiv4" style="max-width: 740px;height: 400px;margin: 0px auto"></div> 
+
+
+                    <table style="width:300px">
+                    <tbody>
+                    <tr>
+                        <td style="width:100px">
+                        <div id="chartDiv5" style="max-width: 100px;height: 700px;margin: 5px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv6" style="max-width: 100px;height: 700px;margin: 5px auto"></div>
+                        </div>
+                        </td>
+                        </tr>
+                    </tbody></table>
+
+
+        </div>
+
+
+
 
         </section>
         <!-- End Project -->
