work on heatmap

--- a/ism-heatmaps.html
+++ b/ism-heatmaps.html
@@ -128,13 +128,6 @@
                         <p class="lead">Digital advertising campaigns and product design, we approach<br>our projects with strategic and creative thinking</p>
                     </div>
 
-                    <div class="col-md-12 mt20 mb40">
-                        <div class="video-container">
-                            <img src="img/video/thumbnail-youtube.jpg"/>
-                            <iframe data-video-embed="https://www.youtube.com/embed/B08iLAtS3AQ"></iframe>
-                        </div>
-                    </div>
-
                     <div class="col-md-12">
                         <div class="col-sm-6 feature-left">
                             <i class="icon-telescope color size-3x"></i>
@@ -159,18 +152,56 @@
 
 
 
-                    <table style="width:300px">
+                    <table style="width:1400px" class="container">
                     <tbody>
                     <tr>
-                        <td style="width:100px">
-                        <div id="chartDiv5" style="max-width: 100px;height: 700px;margin: 5px auto"></div>
+                        <td style="width:150px">
+                        <div id="chartDiv5" style="height: 700px;margin: 0px auto"></div>
                         </div>
                         </td>
                         <td style="width:100px">
-                        <div id="chartDiv6" style="max-width: 100px;height: 700px;margin: 5px auto"></div>
+                        <div id="chartDiv6" style="height: 700px;margin: 0px auto"></div>
                         </div>
                         </td>
-                        </tr>
+                        <td style="width:100px">
+                        <div id="chartDiv7" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv8" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv9" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv10" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv11" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv12" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv13" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv14" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv15" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+
+
+                    </tr>
                     </tbody></table>
 
 
