work on heatmap

--- a/ism-heatmaps.html
+++ b/ism-heatmaps.html
@@ -5,7 +5,7 @@
 <head>
         
         <meta charset="utf-8">
-        <title>Wunderkind - Multipurpose Responsive Onepage Template</title>
+        <title>trademeister</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="img/assets/favicon.png" rel="icon" type="image/png">
         <link href="css/init.css" rel="stylesheet" type="text/css">
@@ -60,33 +60,11 @@
                                         </div>
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="elements.html#elements-tabs">Tabs</a></li>
-                                                <li><a href="elements.html#elements-circles">Progress Circles</a></li>
-                                                <li><a href="elements.html#elements-icons">Icon Fonts</a></li>
-                                                <li><a href="elements.html#elements-maps">Maps</a></li>
-                                                <li><a href="elements.html#elements-grid">Grid Columns</a></li>
-                                                <li><a href="elements.html#elements-countdown">Countdowns</a></li>
-                                                <li><a href="elements.html#elements-testimonials">Testimonials</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-md-3 mg-col">
-                                            <ul>
-                                                <li><a href="elements.html#elements-subscribe">Subscription</a></li>
-                                                <li><a href="elements.html#elements-videos">Video Embeds</a></li>
-                                                <li><a href="elements.html#elements-twitter">Twitter Feed</a></li>
-                                                <li><a href="elements.html#elements-callouts">Callouts</a></li>
-                                                <li><a href="portfolio-contained.html">Portfolio</a></li>
-                                                <li><a href="portfolio-fullwidth.html">Portfolio Fullwidth</a></li>
-                                                <li><a href="project-wide-gallery.html">Project Wide Gallery</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-md-3 mg-col">
-                                            <ul>
                                                 <li><a href="project-slides.html">Project Slides</a></li>
                                                 <li><a href="project-gallery.html">Projects Gallery</a></li>
                                                 <li><a href="project-video.html">Projects Video</a></li>
-                                                <li><a href="project-wide-slides.html">Project Wide Slides</a></li>
-                                                <li><a href="project-wide-video.html">Project Wide Video</a></li>
+                                                <li><a href="ism.html">ISM Manufacturing</a></li>
+                                                <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -124,33 +102,12 @@
                 <div class="row text-center">
 
                     <div class="col-md-12 text-center">
-                        <h1><strong>Project</strong> Slides</h1>
-                        <p class="lead">Digital advertising campaigns and product design, we approach<br>our projects with strategic and creative thinking</p>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="col-sm-6 feature-left">
-                            <i class="icon-telescope color size-3x"></i>
-                            <i class="icon-telescope back-icon"></i>
-                            <div class="feature-left-content">
-                                <h4><strong>Design</strong></h4>
-                                <p>Vivamus congue diam vitae tortor imperdiet congue. Nullam sagittis, tristique diam, ut ullamcorper tellus. Cras porttitor massa. Duis vel est nec sapien suscipit gravida. Integer vitae tortor dui. Donec libero quam, euismod sit amet enim ac, varius dictum.</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 feature-left">
-                            <i class="icon-layers color size-3x"></i>
-                            <i class="icon-layers back-icon"></i>
-                            <div class="feature-left-content">
-                                <h4><strong>Development</strong></h4>
-                                <p>Vivamus congue diam vitae tortor imperdiet congue. Nullam sagittis, tristique diam, ut ullamcorper tellus. Cras porttitor massa. Duis vel est nec sapien suscipit gravida. Integer vitae tortor dui. Donec libero quam, euismod sit amet enim ac, varius dictum.</p>
-                            </div>
-                        </div>
+                        <h1><strong>ISM Manufacturing Heatmap</strong></h1>
+                        <p class="lead">The ISM Manufacturing Indices can be assessed independently of each other from the lowest (red) to the highest (green) in the timerange to provide a view of direction (growing/slowing/contracting) and rate of change</p>
                     </div>
 
                 </div>
             </div>
-
-
 
                     <table style="width:1400px" class="container">
                     <tbody>
