add us stock sector file

--- a/elements.html
+++ b/elements.html
@@ -197,6 +197,11 @@
 
 				</div>
 			</div>
+
+			<p>Grid with 15K records</p>
+			<div id="gridDiv" style="max-width: 740px;height: 400px;margin: 0px auto">
+			</div>
+
 		</section>
 		<!-- End Accordion -->
 
@@ -1704,6 +1709,7 @@
         <script src="https://code.jscharting.com/latest/jscharting.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
+        <script src="js/us_companies.js"></script>
         <script src="js/jquery.js"></script>
 		<script src="js/init.js"></script>
 		<script src="js/scripts.js"></script>
