try out using datatables

--- a/elements.html
+++ b/elements.html
@@ -217,23 +217,17 @@
 			        <tr>
 			            <th>Column 1</th>
 			            <th>Column 2</th>
-			            <th>Column 3</th>
 			        </tr>
 			    </thead>
 			    <tbody>
 			        <tr>
-			            <td>Row 1 Data john</td>
-			            <td>Row 1 Data kelly</td>
+			            <td>john</td>
+			            <td>kelly</td>
 			        </tr>
 			        <tr>
-			            <td>Row 2 Data matt</td>
-			            <td>Row 2 Data gof</td>
+			            <td>matt</td>
+			            <td>hello</td>
 			        </tr>
-			        <tr>
-			            <td>Row 3 Data hello</td>
-			            <td>Row 3 Data yes</td>
-			        </tr>
-
 			    </tbody>
 			</table>
 
