try out using datatables

--- a/elements.html
+++ b/elements.html
@@ -32,26 +32,27 @@
 		             // console.log(example.data)
 		          $(document).ready(function () {
 		              $('#table_id').DataTable({
+		                  //data: example.data,
+		                  //dataSrc:"",
 		                  data: example.data,
-		                  dataSrc:"",
 		                  columns: [
-					          { title: 'Company Name' }, 
-					          { title: 'Ticker'}, 
-					          { title: 'Exchange' }, 
-					          { title: 'Sector' }, 
-					          { title: 'Industry' }, 
-					          { title: 'Market Cap (mil)' },
-					          { title: 'Month of Fiscal Yr End' },
-					          { title: 'P/E (Trailing 12 Months)' },
-					          { title: 'P/E (F1)' },
-					          { title: 'P/E (F2)' },
-					          { title: 'F0 Consensus Est' },
-					          { title: 'F1 Consensus Est' },
-					          { title: 'F2 Consensus Est' },
-					          { title: 'EPS Growth F1' },
-					          { title: 'EPS Growth F2' },
-					          { title: 'F1 PEG' },
-					          { title: 'F2 PEG' }
+					          { title: "Company Name" }, 
+					          { title: "Ticker"}, 
+					          { title: "Exchange" }, 
+					          { title: "Sector" }, 
+					          { title: "Industry" }, 
+					          { title: "Market Cap (mil)" },
+					          { title: "Month of Fiscal Yr End" },
+					          { title: "P/E (Trailing 12 Months)" },
+					          { title: "P/E (F1)" },
+					          { title: "P/E (F2)" },
+					          { title: "F0 Consensus Est" },
+					          { title: "F1 Consensus Est" },
+					          { title: "F2 Consensus Est" },
+					          { title: "EPS Growth F1" },
+					          { title: "EPS Growth F2" },
+					          { title: "F1 PEG" },
+					          { title: "F2 PEG" }
 		                  ]
 		              });
 		          });
@@ -195,7 +196,7 @@
 									<div class="panel-body">
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in consectetur est, nec vulputate sem. Fusce eleifend lobortis quam ac porta. Phasellus eleifend non augue ac fermentum. Pellentesque consectetur et mauris at fringilla. Phasellus porta nisl tortor, in vulputate eros lobortis non. Integer et ornare nisl. Sed volutpat faucibus ex, quis gravida augue cursus sit amet.</p>
 
-										
+
 									</div>
 								</div>
 							</div>
