add us stock sector file

--- a/elements.html
+++ b/elements.html
@@ -254,7 +254,7 @@
 				</div>
 			</div>
 
-			<table id="table_id" class="display" width="70%"></table>
+			 <!-- <table id="table_id" class="display" width="70%"></table> -->
 
 
 		</section>
@@ -989,6 +989,7 @@
 
 								<div class="tab-pane active in" id="tab-c1">
 									<p>Austin swag selfies truffaut portland lomo echo park, freegan artisan fashion axe butcher tilde locavore. Pour-over deep v tote bag, kinfolk photo booth umami man braid. Kale chips tote bag fanny pack, selvage craft beer tax idermy bitters blue bottle cardigan listicle knaus gaard single-origin coffee. IPhone narwhal swag food truck marfa disrupt yuccie, chicharrones try-hard normcore brooklyn.</p>
+
 								</div>
 
 								<div class="tab-pane" id="tab-c2">
@@ -996,7 +997,12 @@
 								</div>
 
 								<div class="tab-pane" id="tab-c3">
-									<p>Kickstarter truffaut cold-pressed chillwave, brooklyn gochujang chartreuse authentic. Lumbersexual heirloom offal twee, semiotics mixtape gastropub master cleanse normcore tousled meh literally. Pug chartreuse next level synth, biodiesel tilde blue bottle ethical yuccie. Microdosing with and fapchillwave gochujang brooklyn intelligentsia, kombucha dreamcatcher vinyl leggings shoreditch pork belly. </p>
+									<p>Kickstarter truffaut cold-pressed chillwave, brooklyn gochujang chartreuse authentic. Lumbersexual heirloom offal twee, semiotics mixtape gastropub master cleanse normcore tousled meh literally. Pug chartreuse next level synth, biodiesel tilde blue bottle ethical yuccie. Microdosing with and fapchillwave gochujang brooklyn intelligentsia, kombucha dreamcatcher vinyl leggings shoreditch pork belly. 
+
+									<table id="table_id" class="display" width="70%"></table>
+
+									</p>
+
 								</div>
 
 								<div class="tab-pane" id="tab-c4">
